Update start-server.sh